在CSS內容增加BACKGROUD AD區塊在768px以上不顯示

--- a/style.css
+++ b/style.css
@@ -1262,6 +1262,11 @@ header div.container .texts a:hover {
         min-height: 450px;
     }
 
+    /** back-ad */
+    .back-ad {
+        display: none;
+    }
+
     /** COUNTDOWN */
     .countdown #clock {
         font-family: sans-serif;
