add BACKGROUND AD image.

--- a/style.css
+++ b/style.css
@@ -844,7 +844,7 @@ header div.container .texts a:hover {
 }
 
 /*-----------------------------------*\
-  #BACKGROUD AD
+  #BACKGROUND AD
 \*-----------------------------------*/
 .back-ad {
     position: relative;
