--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {}
 /*因為是手機優先模式，所以這邊的設定都是以寬度小於575px時
 的預設顯示情形作設定*/
 .container {
-    max-width: 1300px;
+    min-width: 300px;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
@@ -448,7 +448,7 @@ header div.container .texts a:hover {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: aqua;
+    /* background-color: aqua; */
     overflow: hidden;
 }
 
@@ -849,31 +849,34 @@ header div.container .texts a:hover {
 .back-ad {
     position: relative;
     display: block;
-    /* width: 100vw; */
+    /* AD廣告範圍高度是整個畫面高度 */
     min-height: 100vh;
     /* overflow: hidden; */
-    /* background-color: rgba(3, 96, 251, 0.3); */
-    /* background-color: rgba(0, 0, 0, 0.3); */
+    background-color: rgba(231, 223, 200, 1);
     z-index: -999;
 }
 
- .adup,
-.addown{
+
+.back-ad .ad img {
+    position: fixed;
+    /* 圖片尺寸在768px以下用100vw做伸縮 */
+    /* 圖片尺寸在768px以上用object-fit: contain;做伸縮 */
+    width: 100vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -999;
+    /* object-fit: contain; */
+}
+
+.adup,
+.addown {
     height: 30px;
     background-color: #000;
     color: #fff;
     text-align: center;
 }
 
-.back-ad .ad img {
-    position: fixed;
-    min-height: 100vh;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -999;
-    object-fit: contain;
-}
 
 /*-----------------------------------*\
   #COUNTDOWN
@@ -1272,9 +1275,19 @@ header div.container .texts a:hover {
     }
 
     /** back-ad */
+
     /* .back-ad {
         display: none;
     } */
+
+    .back-ad .ad img {
+        /* 圖片尺寸在768px以下用100vw做伸縮 */
+        /* 圖片尺寸在768px以上用object-fit: contain;做伸縮 */
+        width: auto;
+        object-fit: contain;
+    }
+
+
 
     /** COUNTDOWN */
     .countdown #clock {
