調整底部導覽列圖示與大小顏色

--- a/style.css
+++ b/style.css
@@ -468,10 +468,10 @@ header div.container .texts a:hover {
 }
 
 .buttom-nav-link--active {
-    color: #009578;
+    color: var(--dark-pink);
 }
 
-.buttom-nav-icon {
+.buttom-nav a i {
     font-size: 18px;
 }
 
